--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,8 @@ PORT=5000
 DB_URL="mongodb+srv://root:root@cluster0.wuzkw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 JWT_ACCESS_SECRET='yauheni pilets'
 JWT_REFRESH_SECRET='yauheni pilets refresh'
+SMTP_HOST='smtp.gmail.com'
+SMTP_PORT=587
+SMTP_USER='pil717171@gmail.com'
+SMTP_PASSWORD='01121990@aA'
+API_URL='http://localhost:5000'
