--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,15 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.3",
+    "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prettier": "2.3.2",
+    "eslint": "~6.4.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react-hooks": "^2.1.0"
   }
 }
